--- a/Football League Maker/Football League Maker/Views/Leagues/Index.cshtml
+++ b/Football League Maker/Football League Maker/Views/Leagues/Index.cshtml
@@ -1,48 +1,82 @@
-﻿ <div class="container-xxl flex-grow-1 container-p-y">
-              <h4 class="fw-bold py-3 mb-4"> All Leagues</h4>
+﻿@model List<League>
+<div class="container-xxl flex-grow-1 container-p-y">
 
-              <!-- Basic Bootstrap Table -->
-              <div class="card">
-                
-                <div >
-                  <table class="table">
-                    <thead>
-                      <tr>
+    <div class="d-flex justify-content-between align-items-center">
+        <h4>  All Leagues</h4>
+        <a asp-action="Create" style="margin:5px" class="btn btn-primary">Create a new league</a>
+    </div>
+
+    <!-- Basic Bootstrap Table -->
+    <div class="card">
+
+
+        <div>
+            <table class="table">
+                <thead>
+                    <tr>
                         <th>Name</th>
                         <th>Number of Teams</th>
-                        
+                        <th> Teams</th>
+
                         <th>Status</th>
                         <th>Actions</th>
-                      </tr>
-                    </thead>
-                    <tbody class="table-border-bottom-0">
-                      <tr>
-                        <td><i class="fab fa-angular fa-lg text-danger me-3"></i> <strong>Angular Project</strong></td>
-                        <td>Albert Cook</td>
-                     
-                        <td><span class="badge bg-label-primary me-1">Active</span></td>
-                        <td>
-                          <div class="dropdown">
-                            <button type="button" class="btn p-0 dropdown-toggle hide-arrow" data-bs-toggle="dropdown">
-                              <i class="bx bx-dots-vertical-rounded"></i>
-                            </button>
-                            <div class="dropdown-menu">
-                              <a class="dropdown-item" href="javascript:void(0);"
-                                ><i class="bx bx-edit-alt me-1"></i> Edit</a
-                              >
-                              <a class="dropdown-item" href="javascript:void(0);"
-                                ><i class="bx bx-trash me-1"></i> Delete</a
-                              >
-                            </div>
-                          </div>
-                        </td>
-                      </tr>
-                     
-                    </tbody>
-                  </table>
-                </div>
-              </div>
-              <!--/ Basic Bootstrap Table -->
+                    </tr>
+                </thead>
+                <tbody class="table-border-bottom-0">
+                    @foreach (League league in Model)
+                    {
+                        <tr>
+                            <td><i class="fab fa-angular fa-lg text-danger me-3"></i> <strong>@league.Name</strong></td>
+                            <td>@league.NumberOfTeams</td>
+                            <td>
+                                @foreach (LeagueTeam leagueTeam in league.LeagueTeams)
+                                {
+                                    <div>@leagueTeam.Team.Name</div>
+                                }
 
-             
-            </div>
+                            </td>
+
+                            <td>
+
+                                @if (league.IsCompleted)
+                                {
+                                    <span class="badge bg-label-success me-1">Completed</span>
+                                }
+                                else
+                                {
+                                    <span class="badge bg-label-warning me-1">Pending</span>
+                                }
+
+
+                            </td>
+                            <td>
+                                <div class="dropdown">
+                                    <button type="button" class="btn p-0 dropdown-toggle hide-arrow" data-bs-toggle="dropdown">
+                                        <i class="bx bx-dots-vertical-rounded"></i>
+                                    </button>
+                                    <div class="dropdown-menu">
+                                        <a class="dropdown-item" asp-action="Detail" asp-route-id="@league.Id"> <i class="bx bx-detail me-1"></i>Detail</a>
+                                        <a class="dropdown-item" asp-action="Update" asp-route-id="@league.Id"> <i class="bx bx-edit-alt me-1"></i>Edit</a>
+                                        <a class="dropdown-item" asp-action="Delete" asp-route-id="@league.Id"> <i class="bx bx-trash me-1"></i>Delete</a>
+                                    </div>
+                                </div>
+                            </td>
+                        </tr>
+                    }
+
+
+                </tbody>
+            </table>
+        </div>
+    </div>
+    <!--/ Basic Bootstrap Table -->
+
+
+</div>
+
+<script>
+
+    $(document).on("click", "#Create", function() {
+        alert("click");
+    });
+</script>
